distributed-calculator/deploy/dotnet-subtractor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subtractapp
  labels:
    app: subtract
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subtract
  template:
    metadata:
      labels:
        app: subtract
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "subtractapp"
        dapr.io/app-port: "80"
        # dapr.io/enable-metrics: "true"
        dapr.io/config: "appconfig"
        # dapr.io/log-as-json: "true"
    spec:
      containers:
      - name: subtract
        image: ghcr.io/dapr/samples/distributed-calculator-csharp:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Always
