distributed-calculator/deploy/go-adder.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addapp
  labels:
    app: add
spec:
  replicas: 1
  selector:
    matchLabels:
      app: add
  template:
    metadata:
      labels:
        app: add
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "addapp"
        dapr.io/app-port: "6000"
        # dapr.io/enable-metrics: "true"
        dapr.io/config: "appconfig"
        # dapr.io/log-as-json: "true"
    spec:
      containers:
      - name: add
        image: ghcr.io/dapr/samples/distributed-calculator-go:latest
        ports:
        - containerPort: 6000
        imagePullPolicy: Always
