distributed-calculator/deploy/node-divider.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: divideapp
  labels:
    app: divide
spec:
  replicas: 1
  selector:
    matchLabels:
      app: divide
  template:
    metadata:
      labels:
        app: divide
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "divideapp"
        dapr.io/app-port: "4000"
        # dapr.io/enable-metrics: "true"
        dapr.io/config: "appconfig"
        # dapr.io/log-as-json: "true"
    spec:
      containers:
      - name: divide
        image: ghcr.io/dapr/samples/distributed-calculator-node:latest
        ports:
        - containerPort: 4000
        imagePullPolicy: Always
