distributed-calculator/deploy/python-multiplier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multiplyapp
  namespace: 12-factor-app
  labels:
    app: multiply
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multiply
  template:
    metadata:
      labels:
        app: multiply
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "multiplyapp"
        dapr.io/app-port: "5001"
        # dapr.io/enable-metrics: "true"
        dapr.io/config: "appconfig"
        # dapr.io/log-as-json: "true"
    spec:
      containers:
      - name: multiply
        image: mati007thm/distributed-calculator-python:latest
        ports:
        - containerPort: 5001
        imagePullPolicy: Always
