distributed-calculator/deploy/react-calculator.yaml
kind: Service
apiVersion: v1
metadata:
  name: calculator-front-end
  namespace: 12-factor-app
  labels:
    app: calculator-front-end
spec:
  selector:
    app: calculator-front-end
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-front-end
  namespace: 12-factor-app
  labels:
    app: calculator-front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculator-front-end
  template:
    metadata:
      labels:
        app: calculator-front-end
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "calculator-front-end"
        dapr.io/app-port: "8080"
        # dapr.io/enable-metrics: "true"
        dapr.io/config: "appconfig"
        # dapr.io/log-as-json: "true"
    spec:
      containers:
      - name: calculator-front-end
        image: mati007thm/distributed-calculator-react:latest
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
